Fixed spacing on events.

--- a/assets/themes/bootstrap-3/css/style.css
+++ b/assets/themes/bootstrap-3/css/style.css
@@ -605,7 +605,7 @@ input.btn {
   cursor: pointer;
   display: block;
   font-size: 1.2rem;
-  margin-bottom: 2px;
+  margin-bottom: 10px;
 }
 #calendar table .event:hover {
   text-decoration: underline;
